--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -36,10 +37,10 @@
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^1.2.1",
     "css-loader": "^4.3.0",
     "file-loader": "6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
